--- a/training/proof_of_consent.Rmd
+++ b/training/proof_of_consent.Rmd
@@ -27,6 +27,7 @@ library(ggthemes)
 library(ggpubr)
 library(gridBase)
 library(grid)
+library(clValid)
 ```
 Here we have the interest of comparing the scatterplot, dendrogram and score of each hierarchical clustering method in order to do a proof of consent regarding our score, i.e., verify that our score makes sense in hierarchical clustering context. For that, me simulate the data with $n = 100$ sample points:
 ```{r}
@@ -55,9 +56,21 @@ Simulating the "wrong" data:
 X_3 = data.frame(X3 = rexp(n, 1))
 head(X_3)
 ```
+Scatterplot with "ground truth":
+```{r}
+sim.data %>%
+          ggplot(aes(x = X1, y = X2, colour = Y)) +
+          geom_point() +
+          labs(x = "X1",
+                y = "X2",
+                colour = "Labels") +
+          scale_colour_brewer(palette = "Set1") +
+          theme_minimal()
+```
+\
 Making the ploting function:
 ```{r}
-plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
+plot_all_scores = function(original.data, cons.data, cl.list, dists = NA, nlvls = 2){
   list.names = names(cl.list)
   l = length(list.names)
   for(k in 1:l){
@@ -73,8 +86,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
         original.hc = get(hc.func)(dist(scale(original.data[, -3])), method = methods[c])
         original.dend = convert_to_phylo(original.hc)
         score.original = L_score(original.dend, original.data[, -3])
-        p1.original = fviz_dend(original.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.original = fviz_dend(original.hc, k = nlvls)
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.original = temp_data %>%
@@ -85,8 +98,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
                 colour = "Labels") +
           scale_colour_brewer(palette = "Set1") +
           theme_minimal()
-        p1.cons = fviz_dend(cons.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.cons = fviz_dend(cons.hc, k = nlvls)
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.cons = temp_data %>%
@@ -117,8 +130,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
         original.hc = get(hc.funct)(dist(scale(original.data[, -3])))
         original.dend = convert_to_phylo(original.hc)
         score.original = L_score(original.dend, original.data[, -3])
-        p1.original = fviz_dend(original.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.original = fviz_dend(original.hc, k = nlvls)
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.original = temp_data %>%
@@ -129,8 +142,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
                 colour = "Labels") +
           scale_colour_brewer(palette = "Set1") +
           theme_minimal()
-        p1.cons = fviz_dend(cons.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.cons = fviz_dend(cons.hc, k = nlvls)
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.cons = temp_data %>%
@@ -166,8 +179,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
                              method = methods[c])
         original.dend = convert_to_phylo(original.hc)
         score.original = L_score(original.dend, original.data[, -3])
-        p1.original = fviz_dend(original.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.original = fviz_dend(original.hc, k = nlvls)
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.original = temp_data %>%
@@ -178,8 +191,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
                 colour = "Labels") +
           scale_colour_brewer(palette = "Set1") +
           theme_minimal()
-        p1.cons = fviz_dend(cons.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.cons = fviz_dend(cons.hc, k = nlvls)
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.cons = temp_data %>%
@@ -211,8 +224,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
         original.hc = hclust(dist(scale(original.data[, -3]), method = dists[h]))
         original.dend = convert_to_phylo(original.hc)
         score.original = L_score(original.dend, original.data[, -3])
-        p1.original = fviz_dend(original.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.original = fviz_dend(original.hc, k = nlvls)
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.original = temp_data %>%
@@ -223,8 +236,8 @@ plot_all_scores = function(original.data, cons.data, cl.list, dists = NA){
                 colour = "Labels") +
           scale_colour_brewer(palette = "Set1") +
           theme_minimal()
-        p1.cons = fviz_dend(cons.hc, k = 2)
-        factors = factor(cutree(original.hc, k = 2))
+        p1.cons = fviz_dend(cons.hc, k = nlvls)
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         p2.cons = temp_data %>%
@@ -282,7 +295,7 @@ plot(sim.data$X1, sim.data$X2, col = temp_data$labels, main = "Test title")
 \
 Generalizing that for the above list of clustering methods:
 ```{r warning = F, results = 'hide'}
-plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
+plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA, nlvls = 2){
   list.names = names(cl.list)
   l = length(list.names)
   par(mfrow = c(1, 2), mar = c(2, 1.5, 2, 2))
@@ -319,7 +332,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for original
         plot(original.dend2)
-        factors = factor(cutree(original.hc, k = 2))
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -328,7 +341,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for fake
         plot(cons.dend2)
-        factors = factor(cutree(cons.hc, k = 2))
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -364,7 +377,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for original
         plot(original.dend2)
-        factors = factor(cutree(original.hc, k = 2))
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -373,7 +386,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for fake
         plot(cons.dend2)
-        factors = factor(cutree(cons.hc, k = 2))
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -412,7 +425,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for original
         plot(original.dend2)
-        factors = factor(cutree(original.hc, k = 2))
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -422,7 +435,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for fake
         plot(cons.dend2)
-        factors = factor(cutree(cons.hc, k = 2))
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -459,7 +472,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for original
         plot(original.dend2)
-        factors = factor(cutree(original.hc, k = 2))
+        factors = factor(cutree(original.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -468,7 +481,7 @@ plot_all_scores_2 = function(original.data, cons.data, cl.list, dists = NA){
         
         # plotting for fake
         plot(cons.dend2)
-        factors = factor(cutree(cons.hc, k = 2))
+        factors = factor(cutree(cons.hc, k = nlvls))
         temp_data = original.data[, -3]
         temp_data$labels = factors
         plot(temp_data$X1, temp_data$X2, col = temp_data$labels, 
@@ -490,13 +503,109 @@ test.list = list(hclust = c("ward.D", "single","ward.D2", "average", "complete",
 ```{r warning = F, results = 'hide'}
 plot_all_scores_2(sim.data, X_3, test.list, dists)
 ```
+\
+One other important thing to do is verify the alteration made to the score when we multiply each branch by a constant $c$. We can take the trees generated by hierarchical clustering with mccquity and complete method and multiply each branch by $10$ and $100$, assessing the effect of branch sizes in the score (brownian motiom): \
+**Mcquitty modified trees and scores:**
+```{r}
+mcquitty.hc = hclust(dist(scale(sim.data[, -3])), 
+                             method = "mcquitty")
+mcquitty.dend = convert_to_phylo(mcquitty.hc)
+# multiplying by 10
+mcquitty.dend$edge.length = (mcquitty.dend$edge.length * 10)
+score.mcquitty_10 = L_score(mcquitty.dend, sim.data[, -3])
+
+# multiplying by 100
+mcquitty.dend$edge.length = (mcquitty.dend$edge.length * 100)
+score.mcquitty_100 = L_score(mcquitty.dend, sim.data[, -3])
+
+cat("Mcquitty score for 10*branches: ", score.mcquitty_10, "\n")
+cat("Mcquitty score for 100*branches: ", score.mcquitty_100)
+```
+**Complete modified trees and scores:**
+```{r}
+complete.hc = hclust(dist(scale(sim.data[, -3])), 
+                             method = "complete")
+complete.dend = convert_to_phylo(complete.hc)
+# multiplying by 10
+complete.dend$edge.length = (complete.dend$edge.length * 10)
+score.complete_10 = L_score(complete.dend, sim.data[, -3])
+
+# multiplying by 100
+complete.dend$edge.length = (complete.dend$edge.length * 100)
+score.complete_100 = L_score(complete.dend, sim.data[, -3])
+
+cat("Complete score for 10*branches: ", score.complete_10, "\n")
+cat("Complete score for 100*branches: ", score.complete_100)
+```
+So, according to these tests, there appear to be no difference between the scores, meaning that our score is invariant to scale modification, which is a good feature. We can also make a better separation between $(X_1, X_2, Y = 0)$ and $(X_1, X_2, Y= 1)$, repeating the proof of consent made above by several graphs: \
+**Simulating more "separated" data**
+```{r}
+set.seed(500)
+n = 100
+p = 2
+
+Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
+mu_0 = c(0, 0)
+mu_1 = c(8, 8)
+S = diag(nrow = 2, ncol = 2)
 
 
+X = matrix(nrow = n, ncol = p)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+
+sim.data = as.data.frame(cbind(X , Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+row.names(sim.data) = c(1:nrow(sim.data))
+head(sim.data, 4)
+
+# wrong data
+X_3 = data.frame(X3 = rexp(n, 1))
+head(X_3)
+```
+**Plotting**
+```{r}
+plot_all_scores(sim.data, X_3, test.list, dists)
+```
+```{r}
+plot_all_scores_2(sim.data, X_3, test.list, dists)
+```
+\
+**Simulating data with 3 groups**
+```{r}
+set.seed(500)
+n = 100
+p = 2
+
+Y = sample(c(0, 1, 2), n, replace = TRUE, prob = c(1/3, 1/3, 1/3))
+mu_0 = c(1, 0)
+mu_1 = c(2, 3)
+mu_2 = c(-2, 6)
+S = diag(nrow = 2, ncol = 2)
 
 
+X = matrix(nrow = n, ncol = p)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+X[Y == 2, ] = round(mvrnorm(sum(Y == 2), mu_2, S), 4)
 
-
-
+sim.data = as.data.frame(cbind(X , Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+row.names(sim.data) = c(1:nrow(sim.data))
+head(sim.data, 4)
+```
+```{r}
+sim.data %>%
+          ggplot(aes(x = X1, y = X2, colour = Y)) +
+          geom_point() +
+          labs(x = "X1",
+                y = "X2",
+                colour = "Labels") +
+          scale_colour_brewer(palette = "Set1") +
+          theme_minimal()
+```
 
 
 
