--- a/training/superv_comparisons.Rmd
+++ b/training/superv_comparisons.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Some supervised learning tests for Dendrogram Score"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
+  word_document: default
 ---
 ```{r global_options}
 ```
@@ -26,27 +29,27 @@ library(RColorBrewer)
 library(MASS)
 library(kableExtra)
 library(plyr)
+library(clValid)
 ```
 First working with a simulated data set:
 ```{r}
 set.seed(500)
 n = 170
-p = 3
+p = 2
 
 Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
-mu_0 = c(2, 4, 7)
-mu_1 = c(4, 6,  10)
-S_0 = cbind(c(4, 1, 3), c(1, 9, 5), c(4, 5, 12))
-S_1 = cbind(c(10, 5, 8), c(5, 14, 12), c(8, 12, 24))
+mu_0 = c(0, 0)
+mu_1 = c(1, 2)
+S = cbind(c(2, 1), c(1, 3))
 
 
 X = matrix(nrow = n, ncol = p)
-X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S_0), 4)
-X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S_1), 4)
+X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
 
 sim.data = as.data.frame(cbind(X , Y))
 sim.data$Y = as.factor(Y)
-colnames(sim.data) = c("X1", "X2","X3", "Y")
+colnames(sim.data) = c("X1", "X2", "Y")
 row.names(sim.data) = c(1:nrow(sim.data))
 head(sim.data, 4)
 ```
@@ -60,15 +63,16 @@ new_lvls = levels(relab_y)
 ```
 And now testing some hierarchical clustering without the ground truth label:
 ```{r}
-test_data = sim.data[, -4]
+test_data = sim.data[, -3]
 d = dist(test_data)
 diana1 = diana(d)
 diana2 = diana(d, diss = T)
 ```
 ```{r}
 test.wd_hc = scale(test_data) %>%
-  eclust(FUNcluster = "hclust", hc_method = "ward.D2", hc_metric = "euclidean", k = 2)
-cluster = factor(test.wd_hc$cluster)
+  dist() %>%
+  hclust()
+cluster = factor(cutree(test.wd_hc, k = 2))
 cluster
 ```
 ```{r}
@@ -97,7 +101,7 @@ which.max(hits)
 Based on this, we can make a comparison function between a supervised learning prediction score computed into hierarchical clustering with ward.D2 method with our score:
 ```{r}
 tic("Time of the supervised comparison")
-comp = supervised_comparing(sim.data, clust = "hclust", clust_method = "ward.D2", test_index = 4)
+comp = supervised_comparing(sim.data, clust = "hclust", clust_method = "ward.D2", test_index = 3)
 comp
 toc()
 ```
@@ -113,7 +117,7 @@ paste0(names(test.list)[1], test.list[[1]][1])
 Running all supervised comparisons:
 ```{r}
 tic("Running time for all_supervised_comparing")
-data.test = all_supervised_comparing(sim.data, clust = test.list, test_index = 4)
+data.test = all_supervised_comparing(sim.data, clust = test.list, test_index = 3)
 data.test
 toc()
 ```
@@ -121,7 +125,7 @@ Graphing the comparisson:
 ```{r}
 data.test %>%
   mutate(names = rownames(data.test)) %>% 
-  ggplot(aes(x = V1, y = V2)) +
+  ggplot(aes(x = V1, y = V3)) +
   geom_point(color = "red") +
   labs(x = "Proportion of hits",
        y = "Scores") +
@@ -131,7 +135,7 @@ data.test %>%
 ```{r}
 dists = c("euclidean", "manhattan", "canberra", "minkowski")
 tic("Running time for all_supervised_comparing")
-data.test = all_supervised_comparing(sim.data, clust = test.list, test_index = 4, dist = dists)
+data.test = all_supervised_comparing(sim.data, clust = test.list, test_index = 3, dist = dists)
 data.test
 toc()
 ```
@@ -140,387 +144,89 @@ Graphing the comparison acording to distance:
 data.test = data.test %>%
   mutate(V1 = as.numeric(V1),
          V2 = as.numeric(V2),
-         V3 = as.factor(V3))
+         V3 = as.numeric(V3),
+         V4 = as.factor(V4))
 data.test %>%
-  ggplot(aes(x = V1, y = V2, colour = V3)) +
+  ggplot(aes(x = V1, y = V3, colour = V4)) +
   geom_point() +
+  theme_minimal() +
   labs(x = "Proportion of hits",
        y = "Scores",
-       colour = "Distances") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
 ```
 ```{r}
-d = dist(sim.data, p = 2)
-d2 = dist(sim.data)
+data.test %>%
+  ggplot(aes(x = V2, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
+```
+```{r}
+cor(data.test$V2, data.test$V3, method = "spearman")
 ```
 Testing iris dataset:
 ```{r}
 flowers = iris
 tic("Running time for all_supervised_comparing in iris dataset")
-data.test = all_supervised_comparing(flowers, clust = test.list, test_index = 5, dist = dists)
-data.test
+iris.test = all_supervised_comparing(flowers, clust = test.list, test_index = 5, dist = dists)
+iris.test
 toc()
 ```
 And then, graphing it:
+**Proportion of hits versus Score values**
 ```{r echo = F}
-data.test = data.test %>%
+iris.test = iris.test %>%
   mutate(V1 = as.numeric(V1),
          V2 = as.numeric(V2),
-         V3 = as.factor(V3))
-data.test %>%
-  ggplot(aes(x = V1, y = V2, colour = V3)) +
+         V3 = as.numeric(V3),
+         V4 = as.factor(V4))
+
+iris.test %>%
+  ggplot(aes(x = V1, y = V3, colour = V4)) +
   geom_point() +
+  theme_minimal() +
   labs(x = "Proportion of hits",
        y = "Scores",
-       colour = "Distances") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+    theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5))+
+  scale_colour_brewer(palette = "Set1")
 ```
 \
-For the purpose of checking the correctness of our score function we conduct now a "proof of consent":
-**Proof of consent**
+**F1 versus Score values**
 ```{r}
-# generating a non correlated dendrogram:
-set.seed(120)
-n = 170
-X = rexp(n, 12)
-cons.data = data.frame("Test"  = X)
-d = dist(scale(cons.data))
-cons.hc = hclust(d, method = "ward.D2")
-cons.dend = convert_to_phylo(cons.hc)
-cons.score = L_score(cons.dend, sim.data[, -4])
-cons.score
+iris.test %>%
+  ggplot(aes(x = V2, y = V3, colour = V4)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "F1 score",
+       y = "Scores",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5)) +
+  scale_colour_brewer(palette = "Set1")
 ```
 \
-Comparing dendrograms:
-```{r}
-original.hc = hclust(dist(scale(sim.data[, -4])), method = "ward.D2")
-fviz_dend(original.hc, k = 2)
-fviz_dend(cons.hc)
-```
-\
-
-```{r}
-set.seed(500)
-n = 170
-p = 2
-
-Y = sample(c(0, 1), n, replace = TRUE, prob = c(0.5, 0.5))
-mu_0 = c(0, 0)
-mu_1 = c(2, 2)
-S = diag(nrow = 2, ncol = 2)
-
-
-X = matrix(nrow = n, ncol = p)
-X[Y == 0, ] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
-X[Y == 1, ] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
-
-sim.data = as.data.frame(cbind(X , Y))
-sim.data$Y = as.factor(Y)
-colnames(sim.data) = c("X1", "X2", "Y")
-row.names(sim.data) = c(1:nrow(sim.data))
-head(sim.data, 4)
-
-X_3 = data.frame(X3 = rexp(n, 1))
-d = dist(scale(X_3))
-```
-Gráfico verdadeiro:
-```{r}
-a = sim.data %>%
-  ggplot(aes(x = X1, y = X2, colour = Y)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Real value of Y") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-print(a)
-```
-
-
-Testing the code without the variance:
-```{r}
-cons.hc = hclust(d, method = "complete")
-cons.dend = convert_to_phylo(cons.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "complete")
-original.dend = convert_to_phylo(original.hc)
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-a = temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-b = fviz_dend(original.hc, k = 2)
-g = ggarrange(b, a, ncol =2)
-plot(g)
-```
-Testing other methods:
-```{r}
-cons.hc = hclust(d, method = "average")
-cons.dend = convert_to_phylo(cons.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "average")
-original.dend = convert_to_phylo(original.hc)
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-```{r}
-cons.hc = diana(d, diss = T)
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = diana(dist(scale(sim.data[, -3])), diss = T)
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-cons.hc = hclust(d, method = "mcquitty")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "mcquitty")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-cons.hc = hclust(d, method = "single")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "single")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-
-```{r}
-cons.hc = hclust(d, method = "centroid")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "centroid")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-```{r}
-cons.hc = hclust(d, method = "ward.D2")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "ward.D2")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "ward.D2")
-original.dend = convert_to_phylo(original.hc)
-plot(original.dend)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "ward.D")
-original.dend = convert_to_phylo(original.hc)
-plot(original.dend)
-cons.hc = hclust(d, method = "ward.D")
-cons.dend = convert_to_phylo(cons.hc)
-plot(cons.dend)
-```
-
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-```{r}
-cons.hc = hclust(d, method = "ward.D")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "ward.D")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-
-```{r}
-
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-```{r}
-cons.hc = hclust(d, method = "median")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3])), method = "median")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-```{r}
-d = dist(scale(X_3), method = "manhattan")
-cons.hc = hclust(d, method = "mcquitty")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3]), method = "manhattan"), method = "mcquitty")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-d = dist(scale(X_3), method = "manhattan")
-cons.hc = hclust(d, method = "ward.D2")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3]), method = "manhattan"), method = "ward.D2")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-```{r}
-d = dist(scale(X_3), method = "manhattan")
-cons.hc = hclust(d, method = "average")
-cons.dend = convert_to_phylo(cons.hc)
-original.hc = hclust(dist(scale(sim.data[, -3]), method = "manhattan"), method = "average")
-original.dend = convert_to_phylo(original.hc)
-score.cons =  L_score(cons.dend, sim.data[, -3])
-score.original = L_score(original.dend, sim.data[, -3])
-score.cons
-score.original
-```
-```{r}
-factors = factor(cutree(original.hc, k = 2))
-temp_data = sim.data[, -3]
-temp_data$labels = factors
-
-temp_data %>%
-  ggplot(aes(x = X1, y = X2, colour = labels)) +
-  geom_point() +
-  labs(x = "X1",
-       y = "X2",
-       colour = "Labels") +
-  scale_colour_brewer(palette = "Set1") +
-  theme_minimal()
-```
-\
-Testing new crossval:
-```{r}
-test_data = sim.data[, -4]
-cl.list = list(hclust = c("average", "ward.D2"),
-               agnes = c("average"))
-dists = c("euclidean", "manhattan")
-tic("Computing time for new cross validation")
-L_cross_val(test_data, cl.list, dists = dists)
-toc()
-```
 Testing supervisioned comparisson for cross validation score
 ```{r}
 cl.list = list(hclust = c("single","ward.D2", "mcquitty", "average", "centroid", "complete",
@@ -528,25 +234,45 @@ cl.list = list(hclust = c("single","ward.D2", "mcquitty", "average", "centroid",
                agnes = c("weighted", "average"), diana = NULL)
 dists = c("euclidean", "manhattan", "canberra", "maximum")
 tic("Running time for all_supervised_comparing")
-data.test = supervised_comparing_L_cross_val(sim.data, cl.list, test_index = 4, 
+cv.data.test = supervised_comparing_L_cross_val(sim.data, cl.list, test_index = 3, 
                                              dists = dists)
-data.test
+head(cv.data.test, 10)
 toc()
 ```
 ```{r}
-data.test = data.test %>%
-  mutate(V1 = as.numeric(V1),
-         V3 = as.factor(dist_names))
-data.test %>%
-  ggplot(aes(x = V1, y = hits, colour = V3)) +
+cv.data.test %>%
+  ggplot(aes(x = V1, y = hits, colour = dist_names)) +
   geom_point() +
+  theme_minimal() +
   labs(x = "Scores",
        y = "Proportion of hits",
-       colour = "Distances") +
+       colour = "Distances",
+       title = "Scatterplot of proportion of hits versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5))+
   scale_colour_brewer(palette = "Set1") +
-  theme_minimal()+
   coord_flip()
 ```
+```{r}
+cv.data.test %>%
+  ggplot(aes(x = V1, y = F1, colour = dist_names)) +
+  geom_point() +
+  theme_minimal() +
+  labs(x = "Scores",
+       y = "F1",
+       colour = "Distances",
+       title = "Scatterplot of F1 versus Score values 
+       according to different distances") +
+  theme(text = element_text(size = 11, 
+                            family ="serif"),
+        plot.title = element_text(hjust = 0.5))+
+  scale_colour_brewer(palette = "Set1") +
+  coord_flip()
+```
+
+
 
 
 
